# mileMind

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  bootstrap.sh
.claude/: settings.json
.claude/agents/: agent-orchestrator.md  code-reviewer.md  deterministic-engine.md  frontend-reviewer.md  test-writer.md  tool-wrapper.md
.claude/commands/: new-feature.md  test-phase.md
.github/workflows/: ci.yml
backend/: .dockerignore  CLAUDE.md  CLI.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 12168dc934a9_add_invite_requests_table.py  a4d58c24e1dc_add_preferred_units_to_athlete_profiles.py  b8c3f1a29d5e_add_plan_duration_weeks_to_athlete_profiles.py  c3e8a71f5d20_security_hardening.py  d9f41b8a7e02_add_injury_tags_and_acute_injury.py  f75f238710e0_initial_schema.py
backend/evaluation_reports/: FEEDBACK.md  plan_review_report.md
backend/scripts/: generate_pdf_report.py  run_migrations.sh  seed_demo_data.py
backend/src/: cli.py  config.py
backend/src/agents/: __init__.py  batch.py  orchestrator.py  plan_postprocess.py  planner.py  prompts.py  reviewer.py  shared.py  transport.py  validation.py
backend/src/api/: __init__.py  deps.py  jobs.py  main.py  notifications.py  rate_limit.py  schemas.py
backend/src/api/routes/: auth.py  demo.py  invite.py  jobs.py  plans.py  profile.py  strava.py  strength.py
backend/src/db/: __init__.py  models.py  session.py
backend/src/demo/: constants.py
backend/src/demo/plans/: advanced_marathon.json  beginner_5k.json  intermediate_half.json
backend/src/deterministic/: acwr.py  banister.py  daniels.py  monte_carlo.py  taper.py  training_stress.py
backend/src/evaluation/: __init__.py  __main__.py  personas.py  report.py  results.py  run.py  runner.py
backend/src/models/: __init__.py  athlete.py  decision_log.py  plan.py  plan_change.py  progress.py  workout.py
backend/src/services/: __init__.py  crypto.py  strava.py
backend/src/strength/: __init__.py  exercise_catalog.json  models.py  narrative.py  playbook_builder.py
backend/src/tools/: __init__.py  compute_training_stress.py  evaluate_fatigue_state.py  project_taper.py  reallocate_week_load.py  registry.py  simulate_race_outcomes.py  validate_progression_constraints.py
backend/tests/: conftest.py  helpers.py
backend/tests/integration/: test_planner.py
backend/tests/integration/agents/: test_orchestrator.py  test_planner.py  test_reviewer.py
backend/tests/integration/evaluation/: test_runner.py
backend/tests/unit/: test_cli.py
backend/tests/unit/agents/: test_batch.py  test_plan_postprocess.py  test_planner.py  test_prompts.py  test_reviewer.py  test_shared.py  test_transport.py  test_validation.py
backend/tests/unit/api/: conftest.py  test_auth.py  test_demo.py  test_generate.py  test_invite.py  test_invite_requests.py  test_job_manager.py  test_jobs.py  test_orchestrator_progress.py  test_plans.py  test_profile.py  test_security.py  test_strava.py  test_strength.py
backend/tests/unit/db/: test_models.py
backend/tests/unit/deterministic/: test_acwr.py  test_banister.py  test_daniels.py  test_monte_carlo.py  test_taper.py  test_training_stress.py
backend/tests/unit/evaluation/: test_personas.py  test_report.py  test_results.py  test_run_cli.py  test_run_functions.py
backend/tests/unit/models/: test_athlete.py  test_decision_log.py  test_plan.py  test_plan_change.py  test_workout.py
backend/tests/unit/services/: test_crypto.py  test_strava_service.py
backend/tests/unit/strength/: test_narrative.py  test_playbook_builder.py
backend/tests/unit/tools/: test_compute_training_stress.py  test_evaluate_fatigue_state.py  test_project_taper.py  test_reallocate_week_load.py  test_registry.py  test_schemas.py  test_simulate_race_outcomes.py  test_validate_progression_constraints.py
docs/: CLI.md  MileMind_Claude_Code_Setup.md  cost-optimization.md  prd.md  prompts.md
frontend/web/: package-lock.json  package.json  vitest.config.ts
(+46 files in other folders)
